apps/istio/istio-application/0.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    monitoring: prometheus
    istio-injection: enabled
