apps/istio/istio-application/6.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gatewayapi
  namespace: production
  annotations:
    cert-manager.io/issuer: staging-cluster-issuer
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - test.monitoring.devopstech.net
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - test.monitoring.devopstech.net
    tls:
      credentialName: test-monitoring-devopstech-net-crt
      mode: SIMPLE
