apps/istio/istio-application/5.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: second-app
  namespace: production
spec:
  hosts:
  - test.monitoring.devopstech.net
  #- second-app
  gateways:
  - gatewayapi
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: myapp.default.svc.cluster.local
        port:
          number: 80
      #  subset: v1
    #  weight: 10
#- destination:
#    host: second-app
#    subset: v2
# weight: 90
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
  - port: 80
    targetPort: 80
