apps/istio/istio-application/9.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-ingress
  name: istio-ingress-alb
  labels:
    istio: ingressgateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/load-balancer-name: alb-istio-ingress-jaba
    #kubernetes.io/role/elb: 1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    #alb.ingress.kubernetes.io/backend-protocol: HTTPS
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: staging-cluster-issuer
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingressgateway
            port:
              number: 80
