apps/istio/istio-application/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: second-app
  namespace: production
spec:
  hosts:
  - test.monitoring.devopstech.net
  - second-app
  gateways:
  - api
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: second-app
        subset: v1
      weight: 10
    - destination:
        host: second-app
        subset: v2
      weight: 90
